@@ -28,5 +28,17 @@
         <remarks>To be added</remarks>
       </Docs>
     </Member>
+    <Member MemberName="Supported">
+      <MemberSignature Language="C#" Value="public static bool Supported { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Boolean</ReturnType>
+      </ReturnValue>
+      <Docs>
+        <summary>To be added.</summary>
+        <value>To be added.</value>
+        <remarks>To be added.</remarks>
+      </Docs>
+    </Member>
   </Members>
 </Type>
