@@ -2,10 +2,10 @@
 // Gnome.Canvas.custom - Gnome Canvas class customizations
 //
 // Author: Duncan Mak (duncan@ximian.com)
-//         Mike Kestner <mkestner@ximian.com>
+//         Mike Kestner <mkestner@novell.com>
 //
 // Copyright (C) 2003 Duncan Mak
-// Copyright (C) 2004 Novell, Inc.
+// Copyright (C) 2004-2006 Novell, Inc.
 //
 // This code is inserted after the automatically generated code.
 //
@@ -32,3 +32,12 @@
                         affine = new double [6];
 			gnome_canvas_w2c_affine(Handle, affine);
 		}
+
+		public Canvas (bool is_aa) : base (IntPtr.Zero)
+		{
+			string[] names = {"aa"};
+			GLib.Value[] vals = new GLib.Value [1];
+			vals [0] = new GLib.Value (is_aa);
+			CreateNativeObject (names, vals);
+		}
+
